force-app/main/default/objects/Lead/fields/Funding_priorities__c.field-meta.xml
<CustomField>
    <fullName>Funding_priorities__c</fullName>
    <label>Funding priorities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civic Infrastructure and Democracy</fullName>
            </value>
            <value>
                <fullName>Climate Resilience</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Intermediary Grantmaking</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
            <value>
                <fullName>Climate</fullName>
                <isActive>false</isActive>
                <label>Climate</label>
            </value>
            <value>
                <fullName>Health</fullName>
                <isActive>false</isActive>
                <label>Health</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>